# blackterm-phishscan

./: .gitignore  pyproject.toml
blackterm/: main.py
blackterm/core/: config.py  engine.py  logger.py  models.py
blackterm/intelligence/: base.py  manager.py  safebrowsing.py  threat_engine.py  urlhaus.py
blackterm/reports/: csv_reporter.py
